...
        Text(
            "This seal was last seen at $sealPopulation. " +
                "Current colony detected by device is $currentColonyLocation."
        )
        if (sealPopulation.equals(ColonyPopulation.WHITE_ISLAND, ignoreCase = true)) {
            Text(
                "Please take a photo of the tags and seal!",
                style = MaterialTheme.typography.headlineSmall,
            )
        }
        if (showPopulationRow) {
            DataDisplayRow("Population", sealPopulation)
        }
    }
}

