...
                bottom = 40.dp
            )
            .verticalScroll(state = scrollState, enabled = true)
    ) {// Apply padding to left and right

        // SPENO
        DataDisplayRow("SPENO", if (seal.speNo == 0) "" else seal.speNo.toString())

        // TAGS
        DataDisplayRow("Tag 1", seal.tagIdOne)
        DataDisplayRow("Tag 2", seal.tagIdTwo)

        // AGE
...
